# barasurya-BG

./: .env  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  deployment.md  development.md  docker-compose.override.yml  docker-compose.yml  release-notes.md
backend/: Dockerfile  README.md  erd.drawio  pyproject.toml
backend/app/: i18n.py  main.py  utils.py
backend/app/alembic/: env.py
backend/app/api/: deps.py  main.py
backend/app/core/: config.py  db.py
backend/app/crud/: __init__.py  base.py  currency.py  customer.py  customer_type.py  exchange_rate.py  invoice.py  item.py  item_category.py  item_unit.py  journal_entry.py  login.py  organization_settings.py  recipe.py  saft.py  store.py  supplier.py  user.py  vat.py
backend/app/interfaces/: __init__.py  i_base.py  i_permission.py
backend/app/models/: __init__.py  account.py  account_transaction.py  asset.py  asset_depreciation_schedule.py  asset_transaction.py  bank_account.py  bank_import.py  bank_profile.py  bank_statement.py  bank_transaction.py  base.py  contraagent.py  contraagent_bank_account.py  currency.py  customer.py  customer_type.py  document_upload.py  entry_line.py  exchange_rate.py  extracted_invoice.py  invoice.py  invoice_line.py  item.py  item_category.py  item_unit.py  journal_entry.py  lot.py  main.py  measurement_unit.py  organization.py  organization_member.py  organization_settings.py  payable.py  payment.py  permission.py  product.py  product_unit.py  purchase.py  purchase_item.py  (+29 more)
backend/app/repositories/: __init__.py  r_base.py  r_permission.py
backend/app/schemas/: __init__.py  journal_entry.py  permission.py  saft.py  utils.py  vat.py
backend/app/services/: __init__.py  ai_invoice_service.py  asset.py  contraagent_service.py  document_numbering_service.py  document_workflow_service.py  ecb_service.py  journal.py  opening_balances_service.py  pdf_service.py  s_permission.py  saft_service.py  vat_service.py
backend/app/tests/: conftest.py
docs/: README.md  (+10 more)
(+226 files in other folders)
