[project]
name = "barasurya-erp"
version = "1.0.0"
description = "Българска ERP система"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "python-multipart>=0.0.18",
    "email-validator>=2.2.0",
    "passlib[bcrypt]>=1.7.4",
    "tenacity>=9.0.0",
    "pydantic>=2.10.3",
    "emails>=0.6",
    "jinja2>=3.1.4",
    "alembic>=1.14.0",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.2.3",
    "sqlmodel>=0.0.22",
    "bcrypt==4.0.1",  # Pinned for passlib compatibility
    "pydantic-settings>=2.6.1",
    "sentry-sdk[fastapi]>=2.19.2",
    "pyjwt>=2.10.1",
    # i18n support
    "babel>=2.16.0",
    # AI/Document processing
    "azure-ai-documentintelligence>=1.0.0",
    "google-cloud-vision>=3.7.1",
    "pillow>=10.0.0",
    "pdf2image>=1.16.3",
    "aiofiles>=23.2.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
    "mypy>=1.13.0",
    "ruff>=0.8.3",
    "pre-commit>=4.0.1",
    "types-passlib>=1.7.7.20240819",
    "coverage>=7.6.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py312"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
